syntax = "proto3";
package common;
option go_package = "kwil/x/proto/commonpb";

enum DataType {
	BEGIN_DATA_TYPES = 0; // the first enum must be 0 in Proto3.  INVALID_TYPE is a valid Kwil enum, so I make this 0
	INVALID_TYPE = 100;
	NULL = 101;
	STRING = 102;
	INT32 = 103;
	INT64 = 104;
	BOOLEAN = 105;
}

enum AttributeType {
	BEGIN_ATTRIBUTE_TYPES = 0;
	INVALID_ATTRIBUTE = 100;
	PRIMARY_KEY = 101;
	UNIQUE = 102;
	NOT_NULL = 103;
	DEFAULT = 104;
	MIN = 105;
	MAX = 106;
	MIN_LENGTH = 107;
	MAX_LENGTH = 108;
}

enum IndexType {
	BEGIN_INDEX_TYPES = 0;
    INVALID_INDEX = 100;
    BTREE = 101;
}

enum ModifierType {
	NO_MODIFIER = 0; // since modifier can be left blank, the NO_MODIFIER value is 0
	INVALID_MODIFIER = 100;
	CALLER = 101;
}

enum ComparisonOperator {
	BEGIN_OPERATOR_TYPES = 0;
    OPERATOR_INVALID = 100;
    OPERATOR_EQUAL = 101;
    OPERATOR_NOT_EQUAL = 102;
    OPERATOR_GREATER_THAN = 103;
    OPERATOR_GREATER_THAN_OR_EQUAL = 104;
    OPERATOR_LESS_THAN = 105;
    OPERATOR_LESS_THAN_OR_EQUAL = 106;
}

enum QueryType {
	BEGIN_QUERY_TYPES= 0;
	QUERY_INVALID = 100;
	QUERY_INSERT = 101;
	QUERY_UPDATE = 102;
	QUERY_DELETE = 103;
}